[tool.poetry]
name = "empty"
version = "0.1.0"
description = ""
authors = ["JKharidinova <haridinova@soft-way.biz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
